--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="JtSQ7gl2fYhR_y5EPeNm7fUPh5ft6dFhfsd0sTEuLjA" />
     <title>anchaprem</title>
   </head>
   <body>
